@@ -27,6 +27,7 @@
 - Fixed wordlist handling in -m 3000 when candidate passwords use the $HEX[...] syntax
 - Hash-Mode 9700: set native_threads to 32 with Apple GPU's
 - Hash-Mode 9710: set native_threads to 32 with Apple GPU's
+- Hash-Mode 9720: set native_threads to 32 with Apple GPU's
 
 ##
 ## Technical
